--- a/index.html
+++ b/index.html
@@ -205,13 +205,6 @@
     </style>
 </head>
 <body>
-    <!-- GitHub Corner -->
-    <a href="https://github.com/daalagelerua/holbertonschool-portfolio_project/tree/main/vizza-platform" class="github-corner" aria-label="View source on GitHub" target="_blank">
-        <svg width="80" height="80" viewBox="0 0 250 250">
-            <path d="m0,0 0,250 250,0 0,-250z"/>
-            <path d="m127.5,110c-17.4,1.3 -30.7,16.7 -30.7,35.2 0,15.5 10,28.7 23.9,33.4 1.7,0.3 2.3,-0.8 2.3,-1.7 0,-0.8 0,-3.1 0,-6 -17.2,3.8 -20.8,-8.3 -20.8,-8.3 -1.6,-4 -3.8,-5.1 -3.8,-5.1 -3.1,-2.1 0.2,-2.1 0.2,-2.1 3.4,0.2 5.2,3.5 5.2,3.5 3,5.2 7.9,3.7 9.8,2.8 0.3,-2.2 1.2,-3.7 2.1,-4.5 -7.5,-0.9 -15.4,-3.8 -15.4,-16.8 0,-3.7 1.3,-6.7 3.5,-9.1 -0.4,-0.9 -1.5,-4.4 0.3,-9.2 0,0 2.8,-0.9 9.2,3.5 2.7,-0.8 5.5,-1.1 8.3,-1.1 2.8,0 5.7,0.4 8.3,1.1 6.5,-4.4 9.2,-3.5 9.2,-3.5 1.9,4.8 0.7,8.3 0.4,9.2 2.2,2.4 3.5,5.4 3.5,9.1 0,13 -7.9,15.9 -15.4,16.8 1.2,1 2.3,3.1 2.3,6.2 0,4.5 0,8.1 0,9.2 0,0.9 0.6,2 2.3,1.7 13.9,-4.7 23.9,-17.9 23.9,-33.4 0,-18.5 -13.3,-33.9 -30.7,-35.2z" fill="currentColor"/>
-        </svg>
-    </a>
 
     <!-- Hero Section -->
     <section class="hero-section">
@@ -227,13 +220,9 @@
                         <br>Simple, rapide et fiable.
                     </p>
                     <div class="fade-in">
-                        <a href="#demo" class="btn btn-light btn-hero me-3">
-                            <i class="bi bi-play-circle me-2"></i>
-                            Voir la démo
-                        </a>
                         <a href="https://github.com/daalagelerua/holbertonschool-portfolio_project/tree/main/vizza-platform" class="btn btn-outline-light btn-hero" target="_blank">
                             <i class="bi bi-github me-2"></i>
-                            Code source
+                            Voir sur GitHub
                         </a>
                     </div>
                 </div>
@@ -427,11 +416,11 @@
                             <small>Node.js</small>
                         </div>
                         <div class="col-md-2 col-4">
-                            <i class="bi bi-bootstrap fs-1 d-block mb-2"></i>
+                            <i class="bi bi-hexagone fs-1 d-block mb-2"></i>
                             <small>Express.js</small>
                         </div>
                         <div class="col-md-2 col-4">
-                            <i class="bi bi-database fs-1 d-block mb-2"></i>
+                            <i class="bi bi-database-fill fs-1 d-block mb-2"></i>
                             <small>MongoDB</small>
                         </div>
                         <div class="col-md-2 col-4">
@@ -439,7 +428,7 @@
                             <small>JWT Auth</small>
                         </div>
                         <div class="col-md-2 col-4">
-                            <i class="bi bi-palette fs-1 d-block mb-2"></i>
+                            <i class="bi bi-bootstrap fs-1 d-block mb-2"></i>
                             <small>Bootstrap</small>
                         </div>
                         <div class="col-md-2 col-4">
@@ -479,7 +468,7 @@
                         <i class="bi bi-airplane me-2 fs-4"></i>
                         <h5 class="mb-0">Vizza</h5>
                     </div>
-                    <p class="mt-2 mb-0 small text-muted">
+                    <p class="mt-2 mb-0 small text-white">
                         Projet Portfolio
                     </p>
                 </div>
