--- a/index.html
+++ b/index.html
@@ -416,7 +416,7 @@
                             <small>Node.js</small>
                         </div>
                         <div class="col-md-2 col-4">
-                            <i class="bi bi-hexagone fs-1 d-block mb-2"></i>
+                            <i class="bi bi-hexagon fs-1 d-block mb-2"></i>
                             <small>Express.js</small>
                         </div>
                         <div class="col-md-2 col-4">
