--- a/index.html
+++ b/index.html
@@ -229,7 +229,7 @@
                             Voir sur GitHub
                         </a>
                         <a href="#about" class="btn btn-light btn-hero me-3">
-                            <i class="bi bi-play-circle me-2"></i>
+                            <i class="bi bi-book ms-2"></i>
                             À Propos
                         </a>
                     </div>
