--- a/index.html
+++ b/index.html
@@ -228,8 +228,8 @@
                             <i class="bi bi-github me-2"></i>
                             Voir sur GitHub
                         </a>
-                        <a href="#about" class="btn btn-light btn-hero me-3">
-                            <i class="bi bi-book ms-2"></i>
+                        <a href="#about" class="btn btn-light btn-hero ms-3">
+                            <i class="bi bi-book me-2"></i>
                             À Propos
                         </a>
                     </div>
